@@ -1519,13 +1519,12 @@
 			}
 		}
 		if ($data['input_method'] != IM_TREE) {
-			$data['expression_field_name'] = 'expression';
-			$data['expression_field_value'] = $data['expression'];
-			$data['expression_field_readonly'] = $data['limited'];
-			$data['expression_field_params'] = 'getSelectedText(this.form.elements["'.$data['expression_field_name'].'"])';
-		}
+		$data['expression_field_name'] = 'expression';
+		$data['expression_field_value'] = $data['expression'];
+		$data['expression_field_readonly'] = $data['limited'];
+	}
 
-		if (empty($data['parent_discoveryid'])) {
+	if (empty($data['parent_discoveryid'])) {
 			$data['db_dependencies'] = API::Trigger()->get(array(
 				'triggerids' => $data['dependencies'],
 				'output' => array('triggerid', 'description'),
